rutas, controllers y schemas
