# src/controllers/informes/__fixtures__/informes.ts
@@ -1,0 +1,14 @@
+export const informes = [
+  {
+    lineanegocio: "asd",
+    marca_vehiculo: "ford",
+    vehiculo_nombre: "Focus",
+    id: "1a",
+  },
+  {
+    lineanegocio: "asd",
+    marca_vehiculo: "ford",
+    vehiculo_nombre: "Focus",
+    id: "2a",
+  },
+];
