# src/controllers/informes/index.ts
@@ -1,0 +1,1 @@
+export { crearInformeHandler, getInformePorIdHandler } from "./informes";
