# src/routes/informes/index.ts
@@ -1,0 +1,1 @@
+export { informesRoutes } from "./informes";
