# src/schemas/informes/index.ts
@@ -1,0 +1,6 @@
+export {
+  apiErrorSchema,
+  crearInformeSchema,
+  getInformePorIdSchema,
+  informeSchema,
+} from "./informes";
